fixed horizontal scroll bar for the thumbnail swiper, and it had to do with funky class name for div (precisely it's because of how overflow is not defined as 'hidden')

--- a/css/swiper_fullscreen.scss
+++ b/css/swiper_fullscreen.scss
@@ -19,13 +19,13 @@ body {
 }
 
 //main swiper
-.swiper {
+.main {
   //Swiper take 100% of the height of viewport:
   height: 80%;
 }
 
 //thumbnail swiper
-.swiper2 {
+.thumbswiper {
   width: 100%;
   height: 20%;
   //border-box; inclusive padding & margin, ...
@@ -37,7 +37,7 @@ body {
   // padding-bottom: 1%;
 }
 
-.swiper2 .swiper-slide {
+.thumbswiper .swiper-slide {
   //width gets overriden by 'element.style' which is (somewhat procedurally) generated during the initialization for swiper via JS; 'slidesPerView' attribute 
   width: 25%;
   height: 100%;
@@ -45,7 +45,7 @@ body {
   opacity: 0.4;
 }
 
-.swiper2 .swiper-slide-thumb-active {
+.thumbswiper .swiper-slide-thumb-active {
   opacity: 1.0;
 }
 
